# DeepDistill

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: deepdistill-dev-rules.mdc
.skills/AI分析/: SKILL.md
.skills/UI/: SKILL.md
.skills/内容处理/: SKILL.md
.skills/导出管理/: SKILL.md
.skills/经验沉淀/: SKILL.md
.skills/视频分析/: SKILL.md
.skills/部署运维/: SKILL.md
.skills/项目入门/: SKILL.md
config/: default.yaml
config/cookies/: README.md
deepdistill/: __init__.py  __main__.py  api.py  config.py  main.py  pipeline.py
deepdistill/ai_analysis/: __init__.py  extractor.py  llm_client.py  prompt_stats.py
deepdistill/export/: __init__.py  google_docs.py
deepdistill/fusion/: __init__.py  processor.py  visual_generator.py
deepdistill/ingestion/: __init__.py  router.py  video_downloader.py  web_fetcher.py
deepdistill/knowledge/: __init__.py
deepdistill/processing/: __init__.py  asr.py  document.py  image_style.py  ocr.py
deepdistill/video_analysis/: __init__.py  action_detector.py  cinematography.py  object_detector.py  scene_detector.py  style_analyzer.py  transition_detector.py
docs/: DEVELOPMENT.md  Enhanced_Content_Pipeline.md  PRD.md  投诉.txt
frontend/: Dockerfile  package.json  tailwind.config.js
frontend/.next/: trace  trace-build
frontend/app/: globals.css  (+2 more)
scripts/: check-env.sh  deploy.sh  dev-selfcheck.sh  google_auth.py  service-watcher.sh
tests/: __init__.py  conftest.py  test_ai_analysis.py  test_api.py  test_config.py  test_export_title.py  test_fusion.py  test_ingestion.py  test_pipeline.py
(+17 files in other folders)
